--- a/pages/ask/ask.wxml
+++ b/pages/ask/ask.wxml
@@ -12,8 +12,6 @@
     </view>
  <image class='animated lightSpeedIn-right'   src='{{userInfo_icon}}'></image>
 
-
-
 </view>
 
 <view class='summarize animated flipInX' wx:if="{{game_over}}">
@@ -23,9 +21,12 @@
 <view class='body'  wx:if="{{game_over ? false : true}}">
   <view class='animated animated_zoomIn {{zoomIn}} {{zoomOut}}' wx:if="{{thisTitle ? false : true}}">
     <image src='../../images/VS.svg' style='width:600rpx;height:600rpx;'></image> 
-  </view>  
-  <text class='title animated zoomIn' style='font-size:34rpx'>{{thisTitle}}</text> 
-  <view class='content animated fadeIn' wx:if="{{thisTitle}}">
+  </view>   
+  <!-- <text class='title animated zoomIn' style='font-size:34rpx'>{{thisTitle}}</text>  --> 
+  
+   <text class='title animated fadeIn' style='font-size:34rpx'>{{thisTitle}}</text>   
+
+  <view class='content ' wx:if="{{thisTitle}}">
     <view>
       <view>{{score_myself}}</view>
       <view class='process'>
@@ -34,19 +35,21 @@
     </view>
 
 
-    <view class='answerarea'  style='width:80%; ' >
-      <view wx:for="{{thisAnswer}}" bindtap='answer' data-index="{{index}}" data-right="{{item.right}}" class="{{index==click_index&&click_index!=='' ? answer_color : ''}}  {{index==status_users_others.user_choose&&status_users_others.user_choose!=='' ? status_users_others.answer_color : ''}} answer ">
+    <view class='answerarea '  style='width:80%; ' >
+      <view wx:for="{{thisAnswer}}" bindtap='answer' data-index="{{index}}" data-right="{{item.right}}" class="{{index==click_index&&click_index!=='' ? answer_color : ''}}  {{index==rightChoose&&rightChoose!=='' ? rightChooseColor : ''}} answer ">
         <view class="invisible {{index==click_index&&click_index!==''&&answer_color=='right' ? 'sign' : ''}}">○</view>
-        <view class="invisible {{index==click_index&&click_index!==''&&answer_color=='error' ? 'sign' : ''}}">X</view>
+        <view class="invisible {{index==click_index&&click_index!==''&&answer_color=='error' ? 'sign' : ''}}">×</view>
         <view style='width:100%;'>{{thisAnswer[index]}}</view>
-        <view class="invisible {{index==status_users_others.user_choose&&status_users_others.user_choose!==''&&status_users_others.answer_color=='right' ? 'sign' : ''}}" style='left: 88%;'>○</view>
-        <view class="invisible {{index==status_users_others.user_choose&&status_users_others.user_choose!==''&&status_users_others.answer_color=='error' ? 'sign' : ''}}" style='left: 88%;'>X</view>
+        <view class="invisible {{index==rightChoose&&rightChoose!==''&&rightChooseColor=='right' ? 'sign' : ''}}" style='left: 88%;'>○</view>
+        <view class="invisible {{index==rightChoose&&rightChoose!==''&&rightChooseColor=='error' ? 'sign' : ''}}" style='left: 88%;'>×</view>
       </view>
     </view>
+
+    
     <view>
       <view>{{thisIndex + 1}}/{{answerNo}}</view>
       <view class='process'>
-        <view class='process_son' style='height: {{thisIndex*10}}%;'></view>
+        <view class='process_son' style='height: {{(thisIndex + 1) * 10}}%;'></view>
       </view>
     </view>
   </view>
@@ -67,10 +70,11 @@
 <view class='body_summarize animated flipInX' wx:if="{{game_over ? true : false}}">
   <view class='exp'>
     <!-- <image src='../../images/exp.svg' ></image> -->
-    <view style='margin-left:20rpx;'>本次得分:{{score_myself}}</view>
+    <view >＋{{score_myself}}</view>
   </view>
   <view>
+     <image class='floating' bindtap='lookback' src='../../images/quit.svg' style=''></image> 
     <button bindtap='continue_fighting'>继续挑战</button>
-    <button open-type='share' >分享</button>
+    <button style='background: #F17D2E;color:#FFFFFF;   margin-top: 20rpx;'  open-type='share' >分享</button>
   </view>
 </view>
