--- a/pages/lookback/lookback.wxml
+++ b/pages/lookback/lookback.wxml
@@ -1,28 +1,33 @@
-<view class='header'>
+<view class='header' style='width: 100%;height: 100%;display: flex;align-items: center;'>
 
 
   <view class="page-section page-section-spacing swiper">
-      <swiper>
-        <block wx:for="{{thisQustions}}" wx:key="*this">
-          <swiper-item>
-             
-          <view class='answerarea '  style='width:80%; '>
-      <view wx:for="{{item}}" data-index="{{index}}" data-right="{{item.right}}" class="{{index==click_index&&click_index!=='' ? answer_color : ''}}  {{index==rightChoose&&rightChoose!=='' ? rightChooseColor : ''}} answer ">
-      
-         <view class="invisible {{index==click_index&&click_index!==''&&answer_color=='right' ? 'sign' : ''}}">○</view>
-        <view class="invisible {{index==click_index&&click_index!==''&&answer_color=='error' ? 'sign' : ''}}">×</view>
-        <view style='width:100%;'>{{item}}</view>
-        <view class="invisible {{index==rightChoose && rightChoose!==''&&rightChooseColor=='right' ? 'sign' : ''}}" style='left: 88%;'>○</view>
-        <view class="invisible {{index==rightChoose && rightChoose!==''&&rightChooseColor=='error' ? 'sign' : ''}}" style='left: 88%;'>×</view> 
-      </view>
-    </view>
+
+    <swiper style="height:650rpx ">
+
+      <block wx:for="{{thisQustions}}" wx:key="*this">
+        <swiper-item>
+
+          <view class='answerarea ' style='width:80%; '>
+          <text>{{item.topic}}</text>
+
+            <view wx:for="{{item.answers}}" data-index="{{index}}"  class="{{index == 0  ? 'right':'' }}  answer ">
+
+              <view class="invisible {{index == 0}}" >○</view>
+              <!-- <view class="invisible {{index==click_index&&click_index!==''&&answer_color=='error' ? 'sign' : ''}}">×</view> -->
+              
+              <view style='width:100%;'>{{item}}</view>
 
 
-          </swiper-item>
-        </block> 
+            </view>
+          </view>
 
-      </swiper>
-    </view> 
+
+        </swiper-item>
+      </block>
+
+    </swiper>
+  </view>
 
 
 </view>
