--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -28,7 +28,7 @@
   <view class='flex-wrp' style="flex-direction:row;">
     <view class='chooseone' bindtap='aboutWe'>
       <image src='../../images/main_aboutwe.png'></image>
-      <view>关于我们</view>
+      <view>评分榜</view>
     </view>
 
     <view class='flex-wrp ' style='width: 20rpx;'></view>
@@ -36,12 +36,11 @@
     <view class='chooseone' bindtap='moreContent' >
       <image src='../../images/main_more.png'></image>
    
-        <view>更多</view>
-        <view style='margin-top: 44rpx; font-size:26rpx;font-weight: normal;'>敬请期待</view>
+        <view>关于</view>
+        <view style='margin-top: 44rpx; font-size:26rpx;font-weight: normal;'>我们的介绍</view>
     </view>
 
 
   </view>
-  <view style='color:#D4D4DC;font-size:24rpx; margin-top:180rpx'>扎根于圣经，建基于祷告；</view>
-      <view style='color:#D4D4DC;font-size:24rpx;'>委身于基督，忠心于使命。</view>
+  <view style='color:#D4D4DC;font-size:24rpx; margin-top:180rpx'>{{markedWords}}</view>
 </view>
